Ruta index correcta

--- a/Front/Html/index.html
+++ b/Front/Html/index.html
@@ -368,7 +368,7 @@
             </div>
         </div>
     </footer>
-    <script type="module" src="../../../Lab-2-OS/Back/index.js"> </script>
+    <script type="module" src="../../Back/index.js"> </script>
     <script type="module" src="../../Back/AlgoParticionDinamicaConCompactacion.js"> </script>
     <script type="module" src="../../Back/AlgoParticionDinamicaSinCompactacion.js"> </script>
     <script type="module" src="../../Back/particionesFijas.js"> </script>
