Funcionalidad de algoritmos dinamicos

--- a/Front/Html/index.html
+++ b/Front/Html/index.html
@@ -50,8 +50,8 @@
                         </tr>
                         <tr>
                             <th>P0</th>
-                            <th>OS</th>
-                            <th>1048576</th>
+                            <th id="os-name">OS</th>
+                            <th id="os-weight">1048576</thcl>
                         </tr>
                     </thead>
                     <tbody id="tbody-procesos">
