Render de tablas funcional

--- a/Front/Html/index.html
+++ b/Front/Html/index.html
@@ -51,7 +51,7 @@
                         <tr>
                             <th>P0</th>
                             <th id="os-name">OS</th>
-                            <th id="os-weight">1048576</thcl>
+                            <th id="os-weight">1048576</th>
                         </tr>
                     </thead>
                     <tbody id="tbody-procesos">
@@ -353,6 +353,9 @@
                     </thead>
                 </table>
             </div>
+        </div>
+        <div id="resultados">
+            
         </div>
     </main>
 
