Acualizacion de repositorios en el Footer

--- a/Front/Html/index.html
+++ b/Front/Html/index.html
@@ -355,7 +355,7 @@
             </div>
         </div>
         <div id="resultados">
-            
+
         </div>
     </main>
 
@@ -363,7 +363,7 @@
         <div class="footer-content">
             <div class="autor">
                 <p>Juan Manuel Castillo</p>
-                <img src="../static/images/github.png" alt="GitHub">
+                <a href="https://github.com/JinBot31"> <img src="../static/images/github.png" alt="GitHub"></a>
             </div>
             <div class="autor">
                 <p>Sebastian Quintero Jaimes</p>
@@ -371,7 +371,7 @@
             </div>
             <div class="autor">
                 <p>Luna Gaitan</p>
-                <img src="../static/images/github.png" alt="GitHub">
+                <a href="https://github.com/LunaGaitanR"> <img src="../static/images/github.png" alt="GitHub"></a>
             </div>
         </div>
     </footer>
